NEW - bug 3927: PMML Reader can't read from URL http://bimbug.inf.uni-konstanz.de/show_bug.cgi?id=3927